--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "classnames": "^2.2.6",
     "faker": "^4.1.0",
     "miragejs": "^0.1.35",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.0",
     "seedrandom": "^3.0.5"
   },
   "scripts": {
