--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "miragejs": "^0.1.35",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.4",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "seedrandom": "^3.0.5"
   },
   "scripts": {
